Ändrar sidfoten i index

--- a/MvcDemo/Views/Home/Index.cshtml
+++ b/MvcDemo/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to this page!</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>This site is a GitHub project!!!</p>   
+    <p>This site is a GitHub project - produced by the MvcDemo Team</p>
 </div>
